k8s/translate-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: libretranslate-svc
spec:
  type: LoadBalancer # ClusterIP
  selector:
    app: libretranslate
  ports:
    - protocol: "TCP"
      port: 5002
      targetPort: 5000
