k8s/translate-service/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: translate-service-ingress
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
# spec:
#   rules:
#     - http:
#         paths:
#           - path: /api/translate
#             pathType: "Prefix"
#             backend:
#               service:
#                 name: translate-service-service
#                 port:
#                   number: 80
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: translate-service-ingress
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
# spec:
#   rules:
#     - http:
#         paths:
#           - path: /api/translate
#             pathType: "Prefix"
#             backend:
#               service:
#                 name: translate-service
#                 port:
#                   number: 80  # Update this port to match the port your service is listening on
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: translate-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /translate
            pathType: "Prefix"
            backend:
              service:
                name: libretranslate-svc
                port:
                  number: 5002
          - path: /detect
            pathType: "Prefix"
            backend:
              service:
                name: libretranslate-svc
                port:
                  number: 5002
          - path: /languages
            pathType: "Prefix"
            backend:
              service:
                name: libretranslate-svc
                port:
                  number: 5002
